feat: get single page, get namespace pages
